--- a/v1.html
+++ b/v1.html
@@ -94,20 +94,20 @@
 					</div>
 				</div>
 
-				<div class="row2">
-					<div class="col-lg-11">
+				<div class="col-lg-11">
+					<div class="">
 						<h4>Patient Registration</h4>
 					</div>
 				</div>
 
-				<div class="row3">
-					<div class="col-lg-11">
+				<div class="col-lg-11">
+					<div class="">
 						Patient Name:<span class="star">*</span>
 					</div>
 				</div>
 
-				<div class="row4">
-					<div class="col-lg-11">
+				<div class="col-lg-11">
+					<div class="">
 						<select name="title" class="col-lg-2 btn">
 							  <option value="Mr."> Mr.</option>
 							  <option value="Mrs."> Mrs.</option>
@@ -128,15 +128,117 @@
 					</div>
 				</div>
 
-				<div class="row5">
+				<div class="col-lg-11">
 					<div class="col-lg-2">
 					  Child<input type="checkbox" value="">
 					</div>
 					<div class="col-lg-3">
-							<input  type="text" class="form-control" name="nic" placeholder="NIC">
+							<input  type="text" class="form-control" name="nic" placeholder="NIC number">
 					</div>
 				</div>
-			
+
+				<div class="col-lg-11">
+					<div class="col-lg-2">
+					  Date of Birth:<span class="star">*</span>	
+					</div>
+					<div class="col-lg-3">
+						<input  type="text" class="form-control" name="birth" placeholder="yyyy-mm-dd">
+					</div>
+				</div>
+
+				<div class="col-lg-11">
+					<div class="col-lg-2">
+					  	Sex:<span class="star">*</span>	
+					</div>
+					<div class="col-lg-3">
+						<div class="panel panel-default">
+						  	<div class="panel-body">
+						  		<label><input type="radio" name="sex">Male</label>
+						  		<label><input type="radio" name="sex">Female</label>
+						  		<label><input type="radio" name="sex">Other</label>
+						  		
+						  	</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-lg-11">
+					<div class="col-lg-2">
+					  	Ethnicity:	
+					</div>
+					<div class="">
+						<select name="title" class="col-lg-3 btn">
+						  <option value="sinhala"> Sinhala</option>
+						  <option value="tamil"> Tamil</option>
+						  <option value="english"> English</option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-lg-11">
+					<div class="col-lg-2">
+					  	District:	
+					</div>
+					<div class="">
+						<select name="district" class="col-lg-3 btn">
+						  <option value="kandy"> Kandy</option>
+						  <option value="colombo"> Colombo</option>
+						  <option value="Gampaha"> Gampaha</option>
+						</select>
+					</div>
+					<div class="col-lg-2">
+					  	Nationalaty:	
+					</div>
+					<div class="">
+						<select name="nationalaty" class="col-lg-3 btn">
+						  <option value="sri-lanaka"> Sri lanaka</option>
+						  <option value="colombo"> Other</option>
+						</select>
+					</div>
+				</div>
+
+				<div class="col-lg-11">
+					<div class="col-lg-2">
+					  	Phone number:	
+					</div>
+					<div class="col-lg-3">
+						<input  type="text" class="form-control" name="phone" placeholder="">
+					</div>
+					<div class="col-lg-2">
+					  	E-mail:	
+					</div>
+					<div class="col-lg-3">
+						<input  type="text" class="form-control" name="email" placeholder="">
+					</div>
+				</div>
+
+				<div class="col-lg-11">
+					<div class="col-lg-2">
+					  	Address:	
+					</div>
+					<div class="col-lg-3">
+						<textarea class="form-control" rows="2" id="address"></textarea>
+					</div>
+				</div>
+
+				<div class="col-lg-11">
+					<div class="col-lg-2">
+					  Referral<input type="checkbox" value="">
+					</div>
+					<div class="col-lg-3">
+						<input  type="text" class="form-control" name="referral-body" placeholder="Referral Body">
+					</div>
+					<div class="col-lg-3">
+						<input  type="text" class="form-control" name="remark" placeholder="Remarks">
+					</div>
+				</div>
+
+				<div class="col-lg-11">
+					<div class="col-lg-2"></div>
+					<div class="col-lg-3">
+						<button class="btn btn-success">Register and Finish</button>
+					</div>
+				</div>
 			</div><!-- details -->
 		</form>
 	
