--- a/v1.html
+++ b/v1.html
@@ -167,7 +167,7 @@
 					  	Ethnicity:	
 					</div>
 					<div class="">
-						<select name="title" class="col-lg-3 btn">
+						<select name="title" class="col-lg-3 btn drop">
 						  <option value="sinhala"> Sinhala</option>
 						  <option value="tamil"> Tamil</option>
 						  <option value="english"> English</option>
@@ -180,17 +180,17 @@
 					  	District:	
 					</div>
 					<div class="">
-						<select name="district" class="col-lg-3 btn">
+						<select name="district" class="col-lg-3 btn drop">
 						  <option value="kandy"> Kandy</option>
 						  <option value="colombo"> Colombo</option>
 						  <option value="Gampaha"> Gampaha</option>
 						</select>
 					</div>
-					<div class="col-lg-2">
+					<div class="col-lg-2 nationalaty">
 					  	Nationalaty:	
 					</div>
 					<div class="">
-						<select name="nationalaty" class="col-lg-3 btn">
+						<select name="nationalaty" class="col-lg-3 btn drop">
 						  <option value="sri-lanaka"> Sri lanaka</option>
 						  <option value="colombo"> Other</option>
 						</select>
@@ -233,7 +233,7 @@
 					</div>
 				</div>
 
-				<div class="col-lg-11">
+				<div class="col-lg-11 submit-button">
 					<div class="col-lg-2"></div>
 					<div class="col-lg-3">
 						<button class="btn btn-success">Register and Finish</button>
@@ -243,5 +243,11 @@
 		</form>
 	
 	</div>
+
+	<div class="bottom-bar col-lg-12">
+		<p>Copyright <i class="fa fa-copyright" aria-hidden="true"></i> All Rights Reserved - University of Peradeniya - Faculty of Dental Sciences.</p>
+	</div>
+
+
 </body>
 </html>
